--- a/server/index.html
+++ b/server/index.html
@@ -12,18 +12,28 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
+
   </head>
   <body>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-      <script src="/socket.io/socket.io.js"></script>
-      <script>
+     <script src="sw/sw.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="/socket.io/socket.io.js"></script>
+
+
+    <script>
+
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/sw/sw.js').then((registration) => {
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          }).catch((err) => {
+            console.log('ServiceWorker registration failed: ', err);
+          })
+        };
+
         var socket = io.connect('http://localhost');
         $(() => {
           var socket = io();
@@ -38,5 +48,7 @@
           });
         })
       </script>
+
+
   </body>
 </html>
