added test image and manifest.json

--- a/server/index.html
+++ b/server/index.html
@@ -19,10 +19,10 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-     <script src="sw/sw.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-
+    <script src="sw/sw.js"></script>
+    <link rel="manifest" href="/manifest.json">
 
     <script>
 
