--- a/server/index.html
+++ b/server/index.html
@@ -2,16 +2,8 @@
 <html>
   <head>
     <title>omore chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" type="text/css" href="/index.css">
 
   </head>
   <body>
@@ -21,13 +13,12 @@
     </form>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="sw/sw.js"></script>
-    <link rel="manifest" href="/manifest.json">
+    <script src="sw.js"></script>
 
     <script>
 
         if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/sw/sw.js').then((registration) => {
+          navigator.serviceWorker.register('sw.js').then((registration) => {
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
           }).catch((err) => {
             console.log('ServiceWorker registration failed: ', err);
