read and write to DB

--- a/server/index.html
+++ b/server/index.html
@@ -4,24 +4,6 @@
     <title>omore chat</title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" type="text/css" href="/index.css">
-
-    <!-- icon in the highest resolution we need it for -->
-    <link rel="icon" sizes="192x192" href="icon.png">
-
-    <!-- reuse same icon for Safari -->
-    <link rel="apple-touch-icon" href="ios-icon.png">
-
-    <!-- multiple icons for IE -->
-    <meta name="msapplication-square310x310logo" content="icon_largetile.png">
-
-    <!-- To specify the theme color for Chrome on Android, use the meta theme color. -->
-    <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#4285f4">
-
-    <!-- Change the status bar appearances -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
-
   </head>
   <body>
     <ul id="messages"></ul>
@@ -31,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="sw.js"></script>
+    <script type="text/javascript" "client.js"></script>
 
     <script>
 
@@ -56,19 +39,8 @@
           });
         })
 
-
-
-
-        let deferredPrompt;
-
-        window.addEventListener('beforeinstallprompt', (e) => {
-          // Prevent Chrome 67 and earlier from automatically showing the prompt
-          e.preventDefault();
-          // Stash the event so it can be triggered later.
-          deferredPrompt = e;
-        });
       </script>
 
-
+  <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
