--- a/server/index.html
+++ b/server/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <ul id="messages"></ul>
+    <input type="text" id="whoami" placeholder="Anonymous" /><button id="usernameBtn">Submit</button>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
@@ -14,33 +15,8 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="sw.js"></script>
     <script type="text/javascript" "client.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 
-    <script>
 
-        if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('sw.js').then((registration) => {
-            console.log('ServiceWorker registration successful with scope: ', registration.scope);
-          }).catch((err) => {
-            console.log('ServiceWorker registration failed: ', err);
-          })
-        };
-
-        var socket = io.connect('http://localhost');
-        $(() => {
-          var socket = io();
-          $('form').submit(() => {
-            // send out value of the input box
-            socket.emit('chat msg', $('#m').val());
-            $('#m').val(''); // clear out input box after submitting text
-            return false;
-          })
-          socket.on('chat msg', function (msg) {
-            $('#messages').append($('<li>').text(msg))
-          });
-        })
-
-      </script>
-
-  <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
