--- a/server/index.html
+++ b/server/index.html
@@ -8,39 +8,15 @@
   <body>
     <ul id="messages"></ul>
     <form action="">
+      <input id="user" placeholder="Anonymous" /><button>Submit</button>
+      <br/><br/>
       <input id="m" autocomplete="off" /><button>Send</button>
+
     </form>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="sw.js"></script>
     <script type="text/javascript" "client.js"></script>
-
-    <script>
-
-        if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('sw.js').then((registration) => {
-            console.log('ServiceWorker registration successful with scope: ', registration.scope);
-          }).catch((err) => {
-            console.log('ServiceWorker registration failed: ', err);
-          })
-        };
-
-        var socket = io.connect('http://localhost');
-        $(() => {
-          var socket = io();
-          $('form').submit(() => {
-            // send out value of the input box
-            socket.emit('chat msg', $('#m').val());
-            $('#m').val(''); // clear out input box after submitting text
-            return false;
-          })
-          socket.on('chat msg', function (msg) {
-            $('#messages').append($('<li>').text(msg))
-          });
-        })
-
-      </script>
-
-  <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
