--- a/server/index.html
+++ b/server/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <ul id="messages"></ul>
-    <form action="">
-      <input id="user" placeholder="Anonymous" /><button>Submit</button>
+      <input id="whoami" placeholder="Anonymous" /><button id="userSubmitBtn">Submit</button>
       <br/><br/>
+    <form action="">
+
       <input id="m" autocomplete="off" /><button>Send</button>
 
     </form>
